--- a/optimset.tex
+++ b/optimset.tex
@@ -699,7 +699,7 @@ We have analyzed the well-poisedness of an interpolation set employed in many tr
 This set is proved to be optimal under the default setting recommended by Powell, because it minimizes the constant of well-poisedness in a ball centred at the starting point.
 Our analysis justifies the natural configuration of this set from the viewpoint of interpolation theory.
 
-\paragraph*{Acknowledgment}
+\paragraph*{Acknowledgement}
 This paper corresponds to Section~2.5 of the first author's Ph.D.~thesis~\cite{Ragonneau_2022}, co-supervised by the second author and Professor Xiaojun Chen from The Hong Kong Polytechnic University.
 Both authors are grateful to Professor Chen for her support, encouragement, and guidance during the thesis.
 
