--- a/optimset.tex
+++ b/optimset.tex
@@ -159,13 +159,12 @@
 \title{An Optimal Interpolation Set for Model-Based Derivative-Free Optimization Methods}
 \author{
     Tom M. Ragonneau\thanks{
-        Department of Applied Mathematics, The Hong Kong Polytechnic University, Hong Kong\\
-        \email{tom.ragonneau@polyu.edu.hk}; \orcid{0000-0003-2717-2876}
+        Department of Applied Mathematics, The Hong Kong Polytechnic University, Hong Kong.\\
+        \email{tom.ragonneau@polyu.edu.hk}; \orcid{0000-0003-2717-2876}.
     } \and
     Zaikun Zhang\thanks{
-        Department of Applied Mathematics, The Hong Kong Polytechnic University, Hong Kong\\
-        \email{zaikun.zhang@polyu.edu.hk}; \orcid{0000-0001-8934-8190}\\
-        Corresponding author
+        Department of Applied Mathematics, The Hong Kong Polytechnic University, Hong Kong.\\
+        \email{zaikun.zhang@polyu.edu.hk}; \orcid{0000-0001-8934-8190}. Corresponding author.
     }
 }
 \date{\today}
@@ -701,7 +700,7 @@ Our analysis justifies the natural configuration of this set from the viewpoint 
 
 \paragraph*{Acknowledgement}
 This paper corresponds to Section~2.5 of the first author's Ph.D.~thesis~\cite{Ragonneau_2022}, co-supervised by the second author and Professor Xiaojun Chen from The Hong Kong Polytechnic University.
-Both authors are grateful to Professor Chen for her support, encouragement, and guidance during the thesis.
+Both authors are very grateful to Professor Chen for her support, encouragement, and guidance during the thesis.
 
 \paragraph*{Disclosure statement}
 The authors report that there are no competing interests to declare.
