switch the order in L-poisedness

--- a/optimset.tex
+++ b/optimset.tex
@@ -337,7 +337,7 @@ We are now equipped to define the notion of~$\Lambda$-poisedness in the minimum 
     \label{def:lambda-p}
     The poised interpolation set~$\xpt$ is said to be~\emph{$\Lambda$-poised in the minimum Frobenius norm sense} in a compact set~$\mathcal{C} \subseteq \R^n$, for some~$\Lambda > 0$, if
     \begin{equation*}
-        \Lambda \ge \max_{1 \le i \le m} \max_{x \in \mathcal{C}} @@ \abs[\big]{\lagp[i](x)}.
+        \max_{1 \le i \le m} \max_{x \in \mathcal{C}} @@ \abs[\big]{\lagp[i](x)} \le \Lambda.
     \end{equation*}
 \end{definition}
 
@@ -594,7 +594,7 @@ We now calculate the exact value of~$\Lambda_p$ in some special cases.
     which concludes the proof.
 \end{proof}
 
-Before developing the last special value of~$\Lambda_p$ we introduce the following lemma.
+Before developing the last special value of~$\Lambda_p$ we introduce the following elementary lemma.
 
 \begin{lemma}
     \label{lem:max-norm-pq}
